fixed bio layout issue in relation to posts underneath

--- a/_sass/objects/_grid.scss
+++ b/_sass/objects/_grid.scss
@@ -8,8 +8,6 @@ $grid-gutter: $base-spacing-unit;
 .o-grid {
   margin: 0 auto;
   max-width: $grid-width;
-  padding-left: 15px !important;
-  padding-right: 15px !important;
 
   @include clearfix();
 
