--- a/_sass/objects/_wrapper.scss
+++ b/_sass/objects/_wrapper.scss
@@ -9,6 +9,8 @@
 .o-wrapper-short-bio {
 	padding: double($base-spacing-unit) 0;
 	padding-bottom: 0px !important;
+	padding-left: 15px !important;
+  	padding-right: 15px !important;
 }
 
 /**
